<resources>

    <string name="app_name">Basic Robot</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Basic Robot</string>
    <string name="forward">forward</string>
    <string name="stop">stop</string>
    <string name="the_basic_robot">The Basic Robot</string>
    
    <string name="north">forward</string>
    <string name="east">right</string>
    <string name="stop">stop</string>
    <string name="west">left</string>
    <string name="south">back</string>

</resources>